--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -26,3 +26,8 @@
 	excludesfile = ~/dotfiles/git/.gitignore
 [pull]
 	rebase = false
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
