chore: commit save point

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Ashik Nesin
-	email = mail@ashiknesin.com
+	email = ashik@chargebee.com
 [credential]
 	helper = store
 # push easily. http://stackoverflow.com/a/23918418/89484
