--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -14,7 +14,6 @@
 	br = branch --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(contents:subject) %(color:green)(%(committerdate:relative)) [%(authorname)]' --sort=-committerdate
 	rao = remote add origin
 	new = !sh -c 'git log $1@{1}..$1@{0} "$@"' #Commits came in since last command
-
 	ct = commit
 	cln = git clean -df
 	unstage = reset HEAD --
@@ -24,9 +23,12 @@
 	put = commit --amend --no-edit
 	del = "branch -D"
 	save = !git add -A && git commit -m 'chore: commit save point'
-	update-url=remote set-url origin 
+	url=!sh -c 'git remote set-url origin git@github.com:AshikNesin/$0.git'
+	cb-url=!sh -c 'git remote set-url origin git@cbgit:chargebee/$0.git'
 [url "git@github.com:AshikNesin/"]
   insteadOf = "git://github.com/AshikNesin/"
+[url "git@cbgit:chargebee/"]
+  insteadOf = "git@github.com:chargebee/"
 [core]
 	editor = vim
 	excludesfile = ~/dotfiles/git/.gitignore
