--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -24,11 +24,14 @@
 	del = "branch -D"
 	save = !git add -A && git commit -m 'chore: commit save point'
 	url=!sh -c 'git remote set-url origin git@github.com:AshikNesin/$0.git'
+	set-url=!sh -c 'git remote set-url origin $0'
 	cb-url=!sh -c 'git remote set-url origin git@cbgit:chargebee/$0.git'
 [url "git@github.com:AshikNesin/"]
   insteadOf = "git://github.com/AshikNesin/"
 [url "git@cbgit:chargebee/"]
   insteadOf = "git@github.com:chargebee/"
+ [url "git@cbgit:cb-ashik/"]
+  insteadOf = "git@github.com:cb-ashik/"
 [core]
 	editor = vim
 	excludesfile = ~/dotfiles/git/.gitignore
