--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -26,6 +26,7 @@
 	url=!sh -c 'git remote set-url origin git@github.com:AshikNesin/$0.git'
 	set-url=!sh -c 'git remote set-url origin $0'
 	cb-url=!sh -c 'git remote set-url origin git@cbgit:chargebee/$0.git'
+	dummy=!sh -c 'git commit --allow-empty -m "dummy commit"'
 [url "git@github.com:AshikNesin/"]
   insteadOf = "git://github.com/AshikNesin/"
 [url "git@cbgit:chargebee/"]
