--- a/config/iterm2/com.googlecode.iterm2.plist
+++ b/config/iterm2/com.googlecode.iterm2.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>Default Bookmark Guid</key>
 	<string>049EA605-03A7-492B-AE4E-8C9C6329DA57</string>
+	<key>EnableAPIServer</key>
+	<true/>
 	<key>HapticFeedbackForEsc</key>
 	<false/>
 	<key>HotkeyMigratedFromSingleToMulti</key>
