--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -38,6 +38,7 @@
 [core]
 	editor = vim
 	excludesfile = ~/dotfiles/git/.gitignore
+	pager = diff-so-fancy | less --tabs=4 -RFX
 [pull]
 	rebase = false
 [filter "lfs"]
@@ -49,3 +50,18 @@
 	useHttpPath = true
 [init]
 	defaultBranch = main
+[interactive]
+	diffFilter = diff-so-fancy --patch
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+[color "diff"]
+	meta = 11
+	frag = magenta bold
+	func = 146 bold
+	commit = yellow bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
