--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Ashik Nesin
-	email = mail@ashiknesin.com
+	email = ashik@chargebee.com
 [credential]
 	helper = store
 # push easily. http://stackoverflow.com/a/23918418/89484
@@ -65,5 +65,5 @@
 	old = red bold
 	new = green bold
 	whitespace = red reverse
-[maintenance]
-	repo = /Users/cb-it-01-1494/work/chargebee-ui
+# [maintenance]
+# 	repo = /Users/cb-it-01-1494/work/chargebee-ui
