add cbin and up

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,7 +4,8 @@
   "description": "Ashik's Dotfiles",
   "main": "index.js",
   "bin": {
-    "install-app": "./bin/install-app.js"
+    "install-app": "./bin/install-app.js",
+    "up": "./bin/up.js"
   },
   "preferGlobal": true,
   "scripts": {
