added cbr and enabled up cmd

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "bin": {
     "install-app": "./bin/install-app.js",
-    "up": "./bin/up.js"
+    "up": "./bin/up.js",
+    "cbr": "./bin/cbr.js"
   },
   "preferGlobal": true,
   "scripts": {
