chore: commit save point

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -10,6 +10,7 @@
 [color]
 	ui = true
 [alias]
+	pr="!gh pr view --web"
 	set-work-email="!git config user.email $WORK_EMAIL"
 	set-email="!git config user.email 'mail@ashiknesin.com'"
   # list all aliases
