--- a/git/.gitignore
+++ b/git/.gitignore
@@ -116,7 +116,8 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
-
+.env.development
+.env.production
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
