--- a/modules/git/.gitconfig
+++ b/modules/git/.gitconfig
@@ -54,7 +54,7 @@
 [core]
 	editor = vim
 	excludesfile = ~/dotfiles/git/.gitignore_global
-	pager = diff-so-fancy | less --tabs=4 -RFX
+	# pager = delta --line-numbers --dark
 	# sshCommand = "~/.ssh/bin/custom-ssh"
 [pull]
 	rebase = false
@@ -68,7 +68,7 @@
 [init]
 	defaultBranch = main
 [interactive]
-	diffFilter = diff-so-fancy --patch
+	diffFilter = delta --color-only
 [color "diff-highlight"]
 	oldNormal = red bold
 	oldHighlight = red bold 52
@@ -103,3 +103,7 @@
 
 [pager]
         difftool = true
+[delta]
+	navigate = true
+[merge]
+	conflictStyle = zdiff3
