Update Gitleaks config to scan markdown files and ignore local directory

--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -14,6 +14,7 @@ paths = [
   '''^docs/''',
   '''^tests/fixtures/''',
   '''^example/''',
+  '''^local/''',
 ]
 regexes = [
   '''(?i)example[-_]secret[-_\d]*''',
