Reorder allowed commands in VS Code settings
Add Zen Mode and Git settings to Cursor

Update Zed projects and AI model

Optimize Zsh initialization and add paths</think>

--- a/modules/code/settings.json
+++ b/modules/code/settings.json
@@ -319,12 +319,12 @@
   "github.copilot.nextEditSuggestions.enabled": true,
   "telemetry.telemetryLevel": "off",
   "kilo-code.allowedCommands": [
-    "npm test",
-    "npm install",
-    "tsc",
     "git log",
     "git diff",
-    "git show"
+    "git show",
+    "npm test",
+    "npm install",
+    "tsc"
   ],
   "update.showReleaseNotes": false,
   "kilo-code.deniedCommands": [],
